tests/expectations/compiler/constructor/checksum_constructor_external_fail.out
Error [ETYC0372126]: The mapping 'dependent.aleo/bar' does not exist. Please ensure that it is imported or defined in your program.
    --> compiler-test:9:5
     |
   9 |     @checksum(mapping = "dependent.aleo/bar", key = "1field")
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
